--- a/00-welcome/00.1-welcome.es.md
+++ b/00-welcome/00.1-welcome.es.md
@@ -14,7 +14,7 @@ No tengo que decirte cómo la Inteligencia Artificial (AI) ya está dándole for
 
 Solo un ejemplo, aquí está una pequeña degustación sobre lo que serás capaz de hacer:
 
-> Nota: Algunos de estos ejemplos de proyectos fueron diseñados por nuestros graduandos.
+> Nota: algunos de estos ejemplos de proyectos fueron diseñados por nuestros graduandos.
 
 1. Diagnosticar neumonía observando radiografías con un 90 % de precisión (superior a la de los médicos).  
 2. Usar AI para encontrar automáticamente un niño desaparecido entre una multitud de 20K personas (esto pasó de verdad).
@@ -29,15 +29,15 @@ Hoy en día nuestros estudiantes están trabajando en compañías como CEMEX, Bl
 
 No vas a necesitar ningún otro curso o entrenamiento; todo lo que tendrás que hacer es trabajar duro para practicar lo que vayas aprendiendo, y demostrar las mismas habilidades adquiridas en este curso durante tu próxima entrevista de trabajo. 
 
-> Nota: algunos de nuestros graduandos les toma hasta 180 días en encontrar un trabajo en AI. El viaje es diferente para todos; Depende de ti tomar este desafío y trabajar duro hasta que valga la pena. Estaremos contigo durante todo este proceso. ¡Tú puedes!
+> Nota: algunos de nuestros graduandos les toma hasta 180 días en encontrar un trabajo en AI. El viaje es diferente para todos; depende de ti tomar este desafío y trabajar duro hasta que valga la pena. Estaremos contigo durante todo este proceso. ¡Tú puedes!
 
 ## Metodología
 
 Los siguientes son nuestros cuatro pilares aplicados en cualquiera de nuestros cursos.
 
-1. Aula invertida: La clase será un laboratorio; vendrás a clase con lecciones/videos ya leídos y muchas preguntas. ¡Listo para practicar! La única manera de aprender habilidades técnicas es a través de la práctica.
+1. Aula invertida: la clase será un laboratorio; vendrás a clase con lecciones/videos ya leídos y muchas preguntas. ¡Listo para practicar! La única manera de aprender habilidades técnicas es a través de la práctica.
 2. Haz preguntas: el curso se creó de una manera en la que tendrás que hacer preguntas; enfatizamos esto porque se ha convertido en una habilidad esencial para los equipos ágiles y técnicos de hoy; escribir una pregunta "de la manera correcta" te ayuda a estructurar tus ideas de manera lógica, te ayuda a comprender mejor, te permite ser mejor "buscando en Google" y también es la forma más rápida de dejar de estar atascado, que es la barrera número 1 para aprender una habilidad técnica como esta.
-3. Un poquito cada día es mejor que mucho en uno solo: [La mente olvida un 80% de lo que aprende después de 7 días](https://www.mindtools.com/pages/article/forgetting-curve.htm). Por eso es que es tan importante practicar todos los días. Este curso está diseñado para una práctica constante; perder dos clases seguidas te pondrá en una posición desafiante, será difícil recuperar esos días.
+3. Un poquito cada día es mejor que mucho en uno solo: [la mente olvida un 80% de lo que aprende después de 7 días](https://www.mindtools.com/pages/article/forgetting-curve.htm). Por eso es que es tan importante practicar todos los días. Este curso está diseñado para una práctica constante; perder dos clases seguidas te pondrá en una posición desafiante, será difícil recuperar esos días.
 4. Enfoque: deja que tu familia y amigos sepan sobre este curso; pídeles que te dejen enfocarte y estudiar. Las siguientes 16 semanas cambiarán tu carrera profesional para siempre, y tener una buena mentalidad es esencial para una experiencia exitosa.
 
 ## Plan de estudios del Prework en pocas palabras
